--- a/space.html
+++ b/space.html
@@ -161,7 +161,7 @@
      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
      </div>
     </div>
-    <button type="button" class="btn btn-dark btn-lg btn-block">Book your travel now</button>
+    <button type="button" class="btn btn-dark btn-lg btn-block" style="margin-top:50px;">Book your travel now</button>
     </section>
     <!--Footer-->
 
@@ -181,7 +181,7 @@
           </ul>
         </div>
         <div class="col-sm-4 text-center">
-        h2 style="font-style:24px;">Contact Us</h2>
+        <h2 style="font-style:24px;">Contact Us</h2>
         <hr style="border:2px solid:#FFFFFF;" width="50%">
         <p>Phone: 000000</p>
         <p>Email: help@space.com</p>
